# v6sr_c_api

./: CMakeLists.txt  README.md  build.sh  segments.txt
ping/: CMakeLists.txt  ping_common.c  ping_common.h  srh_ping_server.c
sr_api/: CMakeLists.txt  inet6_rth.c
sr_api/include/: sr_api.h
